# django_maria_celery

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirements_prod.txt  requirements_test.txt  start-api.sh  start-celery-beat.sh  start-celery-worker.sh
api/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/management/commands/: process_rewards.py
api/migrations/: 0001_initial.py
api_case/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: test_commands.py  test_tasks.py  test_views.py
